--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: lein deps
-      - run: lein test
+      - run: lein cloverage --codecov
+      - uses: codecov/codecov-action@v1
